--- a/TextPlayer/src/textplayer/MainFrame.form
+++ b/TextPlayer/src/textplayer/MainFrame.form
@@ -53,6 +53,9 @@
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="helpMenu">
               <Properties>
+                <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
+                  <KeyStroke key="Ctrl+SLASH"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Read Me"/>
               </Properties>
               <Events>
